force-app/main/default/objects/Leads__c/Leads__c.object-meta.xml
<CustomObject>
    <label>Leads</label>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>