force-app/main/default/objects/Leads__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Building No. &amp; Street</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>