force-app/main/default/objects/Leads__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Account Name(Mill Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>