force-app/main/default/objects/Leads__c/fields/ConvertedAccId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAccId__c</fullName>
    <label>ConvertedAccId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>