force-app/main/default/objects/Leads__c/fields/Data_com_key__c.field-meta.xml
<CustomField>
    <fullName>Data_com_key__c</fullName>
    <label>Data.com key</label>
    <length>9</length>
    <type>Text</type>
</CustomField>