force-app/main/default/objects/Leads__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Requirement (Order Description)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>