force-app/main/default/objects/Leads__c/fields/Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Date__c</fullName>
    <label>Enquiry Date</label>
    <type>Date</type>
</CustomField>