force-app/main/default/objects/Leads__c/fields/EnquiryType__c.field-meta.xml
<CustomField>
    <fullName>EnquiryType__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Enquiry</fullName>
            </value>
            <value>
                <fullName>Existing Customer Enquiry</fullName>
            </value>
            <value>
                <fullName>Old Enquiry</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>BUY</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>