force-app/main/default/objects/Leads__c/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>