force-app/main/default/objects/Leads__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source(Source of Enquiry)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IndiaMart</fullName>
            </value>
            <value>
                <fullName>TradeIndia</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Mestri</fullName>
            </value>
            <value>
                <fullName>Erection Person</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
                <isActive>false</isActive>
                <label>Advertisement</label>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
                <isActive>false</isActive>
                <label>Employee Referral</label>
            </value>
            <value>
                <fullName>External Referral</fullName>
                <isActive>false</isActive>
                <label>External Referral</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Partner</fullName>
                <isActive>false</isActive>
                <label>Partner</label>
            </value>
            <value>
                <fullName>Public Relations</fullName>
                <isActive>false</isActive>
                <label>Public Relations</label>
            </value>
            <value>
                <fullName>Seminar Internal</fullName>
                <isActive>false</isActive>
                <label>Seminar Internal</label>
            </value>
            <value>
                <fullName>Seminar Partner</fullName>
                <isActive>false</isActive>
                <label>Seminar Partner</label>
            </value>
            <value>
                <fullName>Trade Show</fullName>
                <isActive>false</isActive>
                <label>Trade Show</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <isActive>false</isActive>
                <label>Web</label>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
                <isActive>false</isActive>
                <label>Word of mouth</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>