force-app/main/default/objects/Leads__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open - Not Contacted</fullName>
                <default>true</default>
                <label>Open - Not Contacted</label>
            </value>
            <value>
                <fullName>Working - Contacted</fullName>
            </value>
            <value>
                <fullName>Closed - Not Converted</fullName>
            </value>
            <value>
                <fullName>Closed - Converted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Nurturing</fullName>
                <isActive>false</isActive>
                <label>Nurturing</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <isActive>false</isActive>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>Unqualified</fullName>
                <isActive>false</isActive>
                <label>Unqualified</label>
            </value>
            <value>
                <fullName>Working</fullName>
                <isActive>false</isActive>
                <label>Working</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>