force-app/main/default/objects/Leads__c/fields/Mandal__c.field-meta.xml
<CustomField>
    <fullName>Mandal__c</fullName>
    <label>Mandal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>