force-app/main/default/objects/Leads__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile 2</label>
    <type>Phone</type>
</CustomField>