force-app/main/default/objects/Leads__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Mobile 1</label>
    <type>Phone</type>
</CustomField>