force-app/main/default/objects/Leads__c/fields/Reference_Details__c.field-meta.xml
<CustomField>
    <fullName>Reference_Details__c</fullName>
    <label>Reference Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>