force-app/main/default/objects/Leads__c/fields/Round_Robin_Active__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round Robin Active</label>
    <type>Checkbox</type>
</CustomField>