force-app/main/default/objects/Leads__c/fields/SMS_OptOut__c.field-meta.xml
<CustomField>
    <fullName>SMS_OptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS OptOut</label>
    <type>Checkbox</type>
</CustomField>