force-app/main/default/objects/Leads__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>