force-app/main/default/objects/Leads__c/validationRules/Mobile_Number2_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number2_Restriction</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
OR(
LEN( Mobile__c ) &lt;= 9 ,
LEN( Mobile__c ) &gt;= 13
),
NOT(
OR(
REGEX(Mobile__c, &quot;[0-9 ]+&quot;),
REGEX(Mobile__c, &quot;\\+[0-9 ]+&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>The mobile number entered must be valid</errorMessage>
</ValidationRule>