force-app/main/default/objects/Leads__c/validationRules/Mobile_Number_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Restriction</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
OR(
LEN( Phone__c ) &lt;= 9 ,
LEN( Phone__c ) &gt;= 13
),
NOT(
OR(
REGEX(Phone__c, &quot;[0-9 ]+&quot;),
REGEX(Phone__c, &quot;\\+[0-9 ]+&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>The mobile number entered must be valid</errorMessage>
</ValidationRule>