force-app/main/default/objects/Leads__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Phone__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Company__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Mill_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>