force-app/main/default/objects/Leads__c/listViews/India_Mart.listView-meta.xml
<ListView>
    <fullName>India_Mart</fullName>
    <columns>NAME</columns>
    <columns>LastName__c</columns>
    <columns>Company__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Enquiry_Date__c</columns>
    <columns>EnquiryType__c</columns>
    <columns>Mobile__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>IndiaMart</value>
    </filters>
    <label>India Mart</label>
</ListView>