force-app/main/default/objects/Leads__c/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Leads</label>
    <sharedTo>
        <portalRoleAndSubordinates>AdminPartnerPersonAccount</portalRoleAndSubordinates>
        <roleAndSubordinates>CEO</roleAndSubordinates>
    </sharedTo>
</ListView>