force-app/main/default/objects/Leads__c/listViews/Trade_India.listView-meta.xml
<ListView>
    <fullName>Trade_India</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>TradeIndia</value>
    </filters>
    <label>Trade India</label>
</ListView>