force-app/main/default/objects/Leads__c/listViews/working_leads.listView-meta.xml
<ListView>
    <fullName>working_leads</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Rating__c</columns>
    <columns>Lead_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>MyLeads-User</label>
</ListView>